@@ -3,6 +3,7 @@ package dev.lotnest.minemillion.command;
 import co.aikar.commands.BaseCommand;
 import co.aikar.commands.CommandHelp;
 import co.aikar.commands.annotation.CommandAlias;
+import co.aikar.commands.annotation.CommandPermission;
 import co.aikar.commands.annotation.Description;
 import co.aikar.commands.annotation.Optional;
 import co.aikar.commands.annotation.Subcommand;
@@ -12,16 +13,18 @@ import dev.lotnest.minemillion.gui.GUI;
 import dev.lotnest.minemillion.gui.Item;
 import dev.lotnest.minemillion.gui.Page;
 import dev.lotnest.minemillion.language.LanguageProvider;
+import dev.lotnest.minemillion.player.MineMillionPlayer;
+import dev.lotnest.minemillion.player.MineMillionPlayerCache;
 import dev.lotnest.minemillion.question.Question;
 import dev.lotnest.minemillion.question.QuestionManager;
+import dev.lotnest.minemillion.util.ColorConstants;
+import dev.lotnest.minemillion.util.PermissionUtil;
 import lombok.RequiredArgsConstructor;
-import org.bukkit.ChatColor;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @CommandAlias("minemillion|mm|million")
@@ -29,10 +32,12 @@ public class QuestionSubCommand extends BaseCommand {
 
     private final @NotNull QuestionManager questionManager;
     private final @NotNull LanguageProvider languageProvider;
+    private final @NotNull MineMillionPlayerCache playerCache;
 
     @Subcommand("question")
     @Description("%command.question.description")
     @Syntax("%command.question.syntax")
+    @CommandPermission("minemillion.question")
     public void handleCommand(@NotNull CommandHelp help) {
         help.showHelp();
     }
@@ -40,6 +45,7 @@ public class QuestionSubCommand extends BaseCommand {
     @Subcommand("question add")
     @Description("%command.question.add.description")
     @Syntax("%command.question.add.syntax")
+    @CommandPermission("minemillion.question.add")
     public void handleAddCommand(@NotNull CommandSender sender, String @NotNull [] args) {
         sender.sendMessage("add");
     }
@@ -47,20 +53,22 @@ public class QuestionSubCommand extends BaseCommand {
     @Subcommand("question remove")
     @Description("%command.question.remove.description")
     @Syntax("%command.question.remove.syntax")
+    @CommandPermission("minemillion.question.remove")
     public void handleRemoveCommand(@NotNull CommandSender sender, @Optional Long questionId) {
         if (questionId == null) {
-            sendQuestionIqNotProvidedMessage(sender);
+            sendQuestionIdNotProvidedMessage(sender);
             return;
         }
 
         boolean isQuestionRemoved = questionManager.questionProvider().removeQuestion(questionId);
-        sender.sendMessage(isQuestionRemoved ? ChatColor.GREEN + languageProvider.get("command.question.remove.questionRemoved", questionId.toString()) :
-                ChatColor.RED + languageProvider.get("command.question.remove.questionNotFound", questionId.toString()));
+        sender.sendMessage(isQuestionRemoved ? ColorConstants.GREEN + languageProvider.get("command.question.remove.questionRemoved", questionId.toString()) :
+                ColorConstants.RED + languageProvider.get("command.question.remove.questionNotFound", questionId.toString()));
     }
 
     @Subcommand("question edit")
     @Description("%command.question.edit.description")
     @Syntax("%command.question.edit.syntax")
+    @CommandPermission("minemillion.question.edit")
     public void handleEditCommand(@NotNull CommandSender sender, String @NotNull [] args) {
         sender.sendMessage("edit");
     }
@@ -68,22 +76,23 @@ public class QuestionSubCommand extends BaseCommand {
     @Subcommand("question list")
     @Description("%command.question.list.description")
     @Syntax("%command.question.list.syntax")
+    @CommandPermission("minemillion.question.list")
     public void handleListCommand(@NotNull CommandSender sender) {
         if (!(sender instanceof Player)) {
-            sender.sendMessage(ChatColor.RED + languageProvider.get("command.onlyForPlayers"));
+            sender.sendMessage(ColorConstants.RED + languageProvider.get("command.onlyForPlayers"));
             return;
         }
 
         List<Question> questions = questionManager.questionProvider().getQuestions();
         if (questions.isEmpty()) {
-            sender.sendMessage(ChatColor.RED + languageProvider.get("command.question.list.noQuestionsAvailable"));
+            sender.sendMessage(ColorConstants.RED + languageProvider.get("command.question.list.noQuestionsAvailable"));
             return;
         }
 
         GUI gui = GUI.create(Lists.newArrayList(
                 new Page(languageProvider.get("gui.questions.title"), questions.stream()
-                        .map(Item::questionToItem)
-                        .collect(Collectors.toList())))
+                        .map(question -> Item.questionToItem(question, PermissionUtil.hasPermissionToSeeCorrectAnswers(sender)))
+                        .toList()))
         );
         gui.open((Player) sender);
     }
@@ -91,13 +100,27 @@ public class QuestionSubCommand extends BaseCommand {
     @Subcommand("question reload")
     @Description("%command.question.reload.description")
     @Syntax("%command.question.reload.syntax")
+    @CommandPermission("minemillion.question.reload")
     public void handleReloadCommand(@NotNull CommandSender sender) {
         boolean areQuestionsReloaded = questionManager.questionProvider().reload();
-        sender.sendMessage(areQuestionsReloaded ? ChatColor.GREEN + languageProvider.get("command.question.reload.questionsReloaded") :
-                ChatColor.RED + languageProvider.get("command.question.reload.failedToReloadQuestions"));
+        sender.sendMessage(areQuestionsReloaded ? ColorConstants.GREEN + languageProvider.get("command.question.reload.questionsReloaded") :
+                ColorConstants.RED + languageProvider.get("command.question.reload.failedToReloadQuestions"));
     }
 
-    private void sendQuestionIqNotProvidedMessage(@NotNull CommandSender sender) {
-        sender.sendMessage(ChatColor.RED + languageProvider.get("command.question.questionIdNotProvided"));
+    @Subcommand("question test")
+    @Description("")
+    @Syntax("")
+    @CommandPermission("minemillion.question.test")
+    public void testCommand(@NotNull Player player) {
+        questionManager.questionProvider().getQuestion().ifPresentOrElse(question -> {
+            MineMillionPlayer mineMillionPlayer = playerCache.getOrCreate(player.getUniqueId()).join();
+            mineMillionPlayer.setCurrentQuestion(question);
+            player.sendMessage(ColorConstants.RED + question.getText());
+            player.sendMessage(question.getAnswersArray(false));
+        }, () -> player.sendMessage(ColorConstants.RED + languageProvider.get("command.question.list.noQuestionsAvailable")));
+    }
+
+    private void sendQuestionIdNotProvidedMessage(@NotNull CommandSender sender) {
+        sender.sendMessage(ColorConstants.RED + languageProvider.get("command.question.questionIdNotProvided"));
     }
 }
